# advent-of-code-2025-oc

./: .gitignore  README.md  advent-of-code-2025-oc.opam  dune-project
lib/: day_2.ml  day_3.ml  dune
test/: dune
