(lang dune 3.20)

(name advent-of-code-2025-oc)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name tomato")

(maintainers "Maintainer Name tomato")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name advent-of-code-2025-oc)
 (synopsis "2025 advent of code")
 (description "2025 advent of code")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
